<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/fragment_add_issuer_linear_layout_padding_horizontal"
            android:paddingStart="@dimen/fragment_add_issuer_linear_layout_padding_horizontal"
            tools:context="com.learningmachine.android.app.ui.issuer.AddIssuerActivity">

            <TextView
                android:id="@+id/add_issuer_url_info_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:labelFor="@+id/add_issuer_url_edit_text"
                android:layout_marginTop="@dimen/fragment_add_issuer_linear_layout_top_padding"
                android:layout_marginBottom="12dp"
                android:text="@string/fragment_add_issuer_info_url_text"
                style="@style/Text.ListHeader"/>

            <EditText
                android:id="@+id/add_issuer_url_edit_text"
                style="@style/Text.Passphrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@integer/action_done"
                android:imeActionLabel="@string/ime_action_done"
                android:imeOptions="flagNoFullscreen|actionDone"
                android:inputType="textMultiLine"
                android:maxLines="1"
                android:gravity="top"
                android:padding="12dp"
                android:minHeight="108dp"
                android:singleLine="false"
                android:scrollHorizontally="false"
                android:lines="5"
                />

            <TextView
                android:id="@+id/add_issuer_nonce_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_add_issuer_identity_textview_bottom_padding"
                android:layout_marginBottom="12dp"
                android:text="@string/fragment_add_issuer_identity_text"
                android:labelFor="@+id/add_issuer_nonce_edit_text"
                style="@style/Text.ListHeader"/>

            <EditText
                android:id="@+id/add_issuer_nonce_edit_text"
                style="@style/Text.Passphrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@integer/action_done"
                android:imeActionLabel="@string/ime_action_done"
                android:imeOptions="flagNoFullscreen|actionDone"
                android:inputType="textMultiLine"
                android:maxLines="1"
                android:gravity="top"
                android:padding="12dp"
                android:minHeight="108dp"
                android:singleLine="false"
                android:scrollHorizontally="false"
                android:lines="5"
                />

            <Button
                android:id="@+id/import_button"
                style="@style/RoundedButton.Dark"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/fragment_add_issuer_import_button" />

        </LinearLayout>

    </ScrollView>

</layout>