...
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:gravity="center"
            android:text="@string/onboarding_paste_passphrase_title"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:labelFor="@+id/paste_passphrase_edit_text"
            app:layout_constraintBottom_toTopOf="@+id/passphrase_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spreader1" />

        <TextView
...
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/doneButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passphrase_desc"
            android:inputType="textMultiLine|textNoSuggestions|textVisiblePassword"
            android:privateImeOptions="nm"
            android:scrollHorizontally="false"
...
