...
    <string name="onboarding_backup_methods">Select Backup Methods</string>
    <string name="onboarding_backup_description">Please select at least two options below.</string>
    <string name="onboarding_backup_write_button">Manual Hard Copy</string>
    <string name="onboarding_backup_save_button">Save to Device</string>
    <string name="onboarding_backup_email_button">Copy to Email or Clipboard</string>
    <string name="select_two_to_continue">Select At Least Two to Continue</string>
    <string name="onboarding_backup_done_button">Done</string>


    <string name="onboarding_paste_passphrase_title">Enter Passphrase</string>
    <string name="onboarding_paste_passphrase_desc">Please type or paste your passphrase here:</string>
    <string name="onboarding_paste_passphrase_done">Enter</string>

    <string name="onboarding_passphrase_invalid_title">Passphrase Invalid</string>
    <string name="onboarding_passphrase_invalid_desc">Please check it and try again.</string>
    <string name="onboarding_passphrase_loading">Loading saved passphrase…</string>

    <string name="error_invalid_passphrase_malformed">Invalid passphrase</string>

    <string name="onboarding_welcome_title">Welcome to the new Blockcerts Wallet!</string>
    <string name="onboarding_welcome_desc">We\'ve improved the experience, but you\'ll be able to receive and manage your credentials as before. Please note that you are now required to back up your passphrase, but you can do so easily in the app. Tap continue to begin.</string>
    <string name="onboarding_welcome_button_title">Continue</string>


...
