<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true">

    <com.learningmachine.android.app.ui.onboarding.OnboardingViewPager
        android:id="@+id/onboarding_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"/>
</layout>