...
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/opensans_semibold"
            android:gravity="center"
            android:text="@string/onboarding_passphrase"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/onboarding_passphrase_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_passphrase_desc" />

        <TextView
...
        <View
            android:id="@+id/spreader3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toTopOf="@+id/onboarding_done_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_passphrase_content" />

        <Button
...
